[package]
name = "ipify-async"
version = "0.1.1"
authors = ["Colin Bruner <colin.d.bruner@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = """
A simple asynchronous library for obtaining your public IP
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["macros"] }
